--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "2.2.0",
-    "cordova-plugin-inappbrowser": "3.0.0",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "firebase": "^5.5.9",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -34,7 +34,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.1",
     "@ionic/lab": "1.0.14",
     "typescript": "~2.6.2"
   },
