--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,11 @@
   "integrations": {
     "cordova": {}
   },
-  "type": "ionic-angular"
+  "type": "ionic-angular",
+  "proxies": [
+    {
+      "path": "/api.yelp.com",
+      "proxyUrl": "https://api.yelp.com"
+    }
+  ]
 }
