--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.1",
+    "@ionic/app-scripts": "3.2.1",
     "@ionic/lab": "1.0.14",
     "typescript": "~2.6.2"
   },
